# codepit-protocol

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md
docs/: agent-quickstart.md  (+2 more)
model-optimizer/: Dockerfile  README.md  build_r2_tiny_chat_base.py  modal_app.py  pyproject.toml  railway.toml
model-optimizer/codepit_optimizer/: __init__.py  base_gguf_build.py  brain.py  bundle.py  claim.py  cli.py  credential_rotation.py  export_onnx.py  gguf_build_pipeline.py  managed_worker.py  manifest.py  modelbook_loop.py  modelbook_submission.py  orchestrator.py  payload_hash.py  plan.py  preflight.py  prompts.py  protocol.py  quantize.py  recipes.py  session.py  signer.py  sponsor_discovery.py  tiny_chat_bundle.py  tiny_chat_packager.py  wallet.py  withdrawal.py
model-optimizer/codepit_optimizer/brain_providers/: __init__.py  groq.py  managed.py  openai.py  together.py
model-optimizer/tests/: test_base_gguf_build.py  test_brain.py  test_bundle.py  test_claim.py  test_cli.py  test_credential_rotation.py  test_gguf_build_pipeline.py  test_hosted_base_gguf_builder.py  test_managed_worker.py  test_manifest.py  test_modelbook_loop.py  test_orchestrator.py  test_payload_hash.py  test_plan.py  test_protocol.py  test_recipes.py  test_register_lane.py  test_run_forever.py  test_session.py  test_signer.py  test_sponsor_discovery.py  test_tiny_chat_bundle.py  test_tiny_chat_packager_gguf_mode.py  test_tiny_chat_run.py  test_upload_reuse.py  test_wallet.py  test_withdrawal.py
model-optimizer/tests/fixtures/: registration_payload_hash.json
(+1 files in other folders)
